--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={meta}>
 	<section>
-		<h1 class="mb-6 title">Hello World!</h1>
+		<h1 class="mb-6 title">Hello World! <b class="text-red-600">THIS SITE IS IN PRODUCTION 🚧</b></h1>
 		<p class="mb-4">
 			Hi, I’m a theme for Astro, an example of how you can use this starter to
 			create a personal blog. If you want to know more about how you can
