--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,42 +1,54 @@
 ---
-import type { SiteMeta } from "@/types";
+import type { SiteMeta } from "@/data/siteMeta";
 import BaseHead from "@/components/BaseHead";
-import Header from "@/components/Header";
-import Footer from "@/components/Footer";
+import Header from "@/components/layout/Header";
+import Footer from "@/components/layout/Footer";
 import SkipLink from "@/components/SkipLink";
-import siteMeta from "src/site-meta.config";
+import { siteConfig } from "@/site-config";
 
-export type Props = {
+interface Props {
 	meta: SiteMeta;
-};
+}
 
 const {
-	meta: { title, description, image },
-} = Astro.props as Props;
+	meta: { title, description = siteConfig.description, ogImage, articleDate },
+} = Astro.props;
 ---
 
-<html lang={siteMeta.lang}>
+<html lang={siteConfig.lang}>
 	<head>
-		<BaseHead title={title} description={description} image={image} />
-		<script define:vars={{ siteMeta }}>
+		<BaseHead title={title} description={description} ogImage={ogImage} articleDate={articleDate} />
+		<script define:vars={{ siteConfig }}>
 			const root = document.documentElement;
-			const colorThemeMetaTag = document.querySelector(
-				"meta[name='theme-color']"
-			);
-			const theme =
-				typeof localStorage !== "undefined"
-					? localStorage.getItem("theme")
-					: null;
-			if (
-				theme === "dark" ||
-				(!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)
-			) {
-				root.classList.add("dark");
-				colorThemeMetaTag.setAttribute("content", siteMeta.themeColorDark);
-			} else {
-				root.classList.remove("dark");
-				colorThemeMetaTag.setAttribute("content", siteMeta.themeColorLight);
+			const colorThemeMetaTag = document.querySelector("meta[name='theme-color']");
+
+			// get user preference of dark mode, 1st local storage, 2nd browser
+			function getThemePreference() {
+				if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+					return localStorage.getItem("theme");
+				}
+				return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
 			}
+
+			const isDark = getThemePreference() === "dark";
+
+			// watch document element class attribute and update user preference when it changes.
+			const observer = new MutationObserver(() => {
+				const rootIsDark = root.classList.contains("dark");
+				// set the meta attribute
+				colorThemeMetaTag.setAttribute(
+					"content",
+					siteConfig[rootIsDark ? "themeColorDark" : "themeColorLight"]
+				);
+				// store user preference
+				if (typeof localStorage !== "undefined") {
+					localStorage.setItem("theme", rootIsDark ? "dark" : "light");
+				}
+			});
+			observer.observe(root, { attributeFilter: ["class"] });
+
+			// initailse root class attribute
+			root.classList.toggle("dark", isDark);
 		</script>
 	</head>
 	<body>
