--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,114 +1,89 @@
 ---
-import BaseLayout from "./Base.astro";
-import { getLocaleTime, getPreviousAndNextPosts, sortMDByDate } from "src/util";
-import Paginator from "@/components/Paginator";
-import type { Post } from "@/types";
+import type { CollectionEntry } from "astro:content";
 
+import BaseLayout from "./Base.astro";
+import BlogHero from "@/components/blog/Hero";
+
+interface Props {
+	post: CollectionEntry<"post">;
+}
+
+const { post } = Astro.props;
 const {
-	content: { title, description, publishDate, tags },
-	headings,
-} = Astro.props;
-const date = new Date(publishDate);
-const datetime = date.toISOString();
-const postDate = getLocaleTime(date);
-const currentPage = new URL(Astro.request.url).pathname;
-const allPosts = await Astro.glob<Post>("../pages/posts/*.mdx");
-const allSortedPosts = sortMDByDate(allPosts);
-const { prev, next } = getPreviousAndNextPosts(currentPage, allSortedPosts);
-const paginationProps = {
-	...(prev && {
-		prevUrl: {
-			url: prev.url,
-			text: `← ${prev.frontmatter.title}`,
-			srLabel: " Previous Article:",
-		},
-	}),
-	...(next && {
-		nextUrl: {
-			url: next.url,
-			text: `${next.frontmatter.title} →`,
-			srLabel: "Next Article:",
-		},
-	}),
-};
+	data: { title, description, ogImage, publishDate },
+	slug,
+} = post;
+const socialImage = ogImage ?? `/og-image/${slug}.png`;
+const articleDate = publishDate.toISOString();
+const { headings } = await post.render();
 ---
 
-<BaseLayout meta={{ title, description }}>
-	<div class="sm:grid sm:grid-cols-[3fr_1fr] sm:gap-x-10 sm:items-start">
-		<article>
-			<h1 class="title">{title}</h1>
-			<span
-				class="flex flex-col sm:gap-y-2 md:flex-row md:items-center md:gap-y-0 md:divide-x md:divide-textColor"
-			>
-				<time {datetime} class="pr-2">{postDate}</time>
-				{
-					tags?.length && (
-						<div class="flex items-center md:pl-2">
-							<svg
-								aria-hidden="true"
-								xmlns="http://www.w3.org/2000/svg"
-								class="w-6 h-6"
-								viewBox="0 0 24 24"
-								stroke-width="1.5"
-								stroke="currentColor"
-								fill="none"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-								<path d="M7.859 6h-2.834a2.025 2.025 0 0 0 -2.025 2.025v2.834c0 .537 .213 1.052 .593 1.432l6.116 6.116a2.025 2.025 0 0 0 2.864 0l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-6.117 -6.116a2.025 2.025 0 0 0 -1.431 -.593z" />
-								<path d="M17.573 18.407l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-7.117 -7.116" />
-								<path d="M6 9h-.01" />
-							</svg>
-							<ul class="flex items-center ml-1 gap-x-2">
-								{tags.map((tag) => (
-									<li>
-										<a
-											class="inline-block cactus-link"
-											aria-label={`View more blogs with the tag ${tag}`}
-											href={`/tags/${tag}`}
-										>
-											&#35;{tag}
-										</a>
-									</li>
-								))}
-							</ul>
-						</div>
-					)
-				}
-			</span>
-			<p class="mt-8">{description}</p>
+<script>
+	const scrollBtn = document.getElementById("to-top-btn") as HTMLButtonElement;
+	const targetHeader = document.getElementById("blog-hero") as HTMLDivElement;
+
+	function callback(entries: IntersectionObserverEntry[]) {
+		entries.forEach((entry) => {
+			// only show the scroll to top button when the heading is out of view
+			scrollBtn.dataset.show = (!entry.isIntersecting).toString();
+		});
+	}
+
+	scrollBtn.addEventListener("click", () => {
+		document.documentElement.scrollTo({ top: 0, behavior: "smooth" });
+	});
+
+	const observer = new IntersectionObserver(callback);
+	observer.observe(targetHeader);
+</script>
+
+<BaseLayout meta={{ title, description, articleDate, ogImage: socialImage }}>
+	<div class="gap-x-10 lg:flex lg:items-start">
+		{
+			!!headings.length && (
+				<aside class="sticky top-20 order-2 -mr-32 hidden basis-64 lg:block">
+					<h2 class="font-semibold">Table of Contents</h2>
+					<ul class="mt-4 text-xs">
+						{headings.map(({ depth, slug, text }) => (
+							<li class="line-clamp-2 hover:text-accent">
+								<a
+									class={`block ${depth <= 2 ? "mt-3" : "mt-2 pl-3 text-[0.6875rem]"}`}
+									href={`#${slug}`}
+									aria-label={`Scroll to section: ${text}`}
+								>
+									<span>{"#".repeat(depth)}</span> {text}
+								</a>
+							</li>
+						))}
+					</ul>
+				</aside>
+			)
+		}
+		<article class="flex-grow break-words">
+			<div id="blog-hero"><BlogHero content={post} /></div>
 			<div
-				class="mt-12 prose prose-sm prose-cactus prose-headings:font-semibold prose-headings:before:content-['#'] prose-headings:before:text-accent prose-headings:before:absolute prose-headings:before:-ml-4 prose-th:before:content-none"
+				class="prose prose-sm prose-cactus mt-12 prose-headings:font-semibold prose-headings:before:absolute prose-headings:before:-ml-4 prose-headings:before:text-accent prose-headings:before:content-['#'] prose-th:before:content-none"
 			>
 				<slot />
 			</div>
 		</article>
-		<aside
-			class="invisible hidden text-right sm:sticky sm:top-20 sm:block sm:visible"
+	</div>
+	<button
+		id="to-top-btn"
+		class="z-90 fixed bottom-8 right-4 flex h-10 w-10 translate-y-28 items-center justify-center rounded-full border-2 border-transparent bg-zinc-200 text-3xl opacity-0 transition-all duration-300 hover:border-zinc-400 data-[show=true]:translate-y-0 data-[show=true]:opacity-100 dark:bg-zinc-700 sm:right-8 sm:h-12 sm:w-12"
+		aria-label="Back to Top"
+		data-show="false"
+		><svg
+			xmlns="http://www.w3.org/2000/svg"
+			aria-hidden="true"
+			focusable="false"
+			fill="none"
+			viewBox="0 0 24 24"
+			stroke-width="2"
+			stroke="currentColor"
+			class="h-6 w-6"
 		>
-			<h2 class="font-semibold">Table of Contents</h2>
-			<ul class="mt-4 text-xs space-y-2">
-				{
-					headings.map(({ slug, text }) => (
-						<li class="line-clamp-2 hover:text-accent">
-							<a href={`#${slug}`} aria-label={`Scroll to section: ${text}`}>
-								<span>&#35;</span> {text}
-							</a>
-						</li>
-					))
-				}
-			</ul>
-		</aside>
-	</div>
-	<div class="mt-24">
-		<Paginator {...paginationProps} />
-	</div>
+			<path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"></path>
+		</svg>
+	</button>
 </BaseLayout>
-
-<style>
-	/* Hide the weird code block adding the language */
-	:global(article pre .language-id) {
-		@apply hidden;
-	}
-</style>
