--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,52 +1,46 @@
 ---
+import { getCollection } from "astro:content";
 import PageLayout from "@/layouts/Base";
-import BlogPostPreview from "@/components/BlogPostPreview";
+import PostPreview from "@/components/blog/PostPreview";
 import SocialList from "@/components/SocialList";
-import { sortMDByDate } from "@/util";
-import type { Post } from "@/types";
-
-const meta = {
-	title: "Astro Cactus",
-	description: "The perfect starter for your perfect blog.",
-};
+import { sortMDByDate } from "@/utils";
 
 const MAX_POSTS = 10;
-const allPosts = await Astro.glob<Post>("./posts/*.mdx");
+const allPosts = await getCollection("post");
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 ---
 
-<PageLayout meta={meta}>
+<PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="mb-6 title">Hello World! <b class="text-red-600">THIS SITE IS IN PRODUCTION 🚧</b></h1>
+		<h1 class="title mb-6">Hello World! <span class="text-red-600">UNDER CONSTRUCTION 🚧</span></h1>
 		<p class="mb-4">
-			Hi, I’m a theme for Astro, an example of how you can use this starter to
-			create a personal blog. If you want to know more about how you can
-			customise me, add more posts, and make it your own, click on one of the
-			social links which will take you to my repo.
+			Hi, I’m a theme for Astro, an example of how you can use this starter to create a personal
+			blog. If you want to know more about how you can customise me, add more posts, and make it
+			your own, click on one the github icon link below which will take you to my repo.
 		</p>
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
-		<h2 class="mb-4 text-xl title">Posts</h2>
+		<h2 class="title mb-4 text-xl">Posts</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			{
 				allPostsByDate.map((p) => (
-					<li class="flex flex-wrap items-center gap-x-2 [&_q]:w-full">
-						<BlogPostPreview post={p} as="h2" />
+					<li class="flex flex-col gap-x-2 sm:flex-row">
+						<PostPreview post={p} />
 					</li>
 				))
 			}
 		</ul>
 	</section>
 	<section class="mt-16">
-		<h2 class="mb-4 text-xl title">Technologies</h2>
+		<h2 class="title mb-4 text-xl">Technologies</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			<li>
 				<a
 					href="https://astro.build"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="inline-block cactus-link"
+					class="cactus-link inline-block"
 					>Astro
 				</a>:
 				<p class="inline-block sm:mt-2">Build fast websites, faster.</p>
@@ -56,7 +50,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 					href="https://docs.astro.build/en/guides/integrations-guide/image/"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="inline-block cactus-link"
+					class="cactus-link inline-block"
 					>@astro/image
 				</a>:
 				<p class="inline-block sm:mt-2">
@@ -68,7 +62,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 					href="https://tailwindcss.com"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="inline-block cactus-link"
+					class="cactus-link inline-block"
 					>Tailwind CSS
 				</a>:
 				<p class="inline-block sm:mt-2">
@@ -77,13 +71,33 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 			</li>
 			<li>
 				<a
+					href="https://www.markdownguide.org/"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="cactus-link inline-block"
+					>Markdown
+				</a>:
+				<p class="inline-block sm:mt-2">Simple and easy-to-use markup language.</p>
+			</li>
+			<li>
+				<a
 					href="https://mdxjs.com/"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="inline-block cactus-link"
+					class="cactus-link inline-block"
 					>MDX
 				</a>:
 				<p class="inline-block sm:mt-2">Markdown for the component era.</p>
+			</li>
+			<li>
+				<a
+					href="https://github.com/vercel/satori"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="cactus-link inline-block"
+					>Satori
+				</a>:
+				<p class="inline-block sm:mt-2">Generating png Open Graph images for blog posts</p>
 			</li>
 		</ul>
 	</section>
