--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -1,7 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import type { IElement } from "@/data/shared";
-import { getFormattedDate } from "@/utils";
 
 interface Props extends IElement {
 	post: CollectionEntry<"post">;
@@ -9,15 +8,11 @@ interface Props extends IElement {
 }
 
 const { post, as: Element = "div", withDesc = false } = Astro.props;
-const date = new Date(post.data.publishDate);
-const datetime = date.toISOString();
-const postDate = getFormattedDate(date);
 ---
 
-<time datetime={datetime} class="min-w-[120px] text-gray-500">{postDate}</time>
 <Element>
 	<a href={`/posts/${post.slug}`} class="cactus-link" rel="prefetch">
 		{post.data.title}
 	</a>
 </Element>
-{withDesc && <q class="line-clamp-3 mt-2 block italic">{post.data.description}</q>}
+{withDesc && <span class="mt-2 block line-clamp-3">{post.data.description}</span>}
