--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,18 +20,6 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 		</p>
 		<SocialList />
 	</section>
-	<section aria-label="Blog post list" class="mt-16">
-		<h2 class="title mb-4 text-xl">Posts</h2>
-		<ul class="space-y-4 sm:space-y-2">
-			{
-				allPostsByDate.map((p) => (
-					<li class="flex flex-col gap-x-2 sm:flex-row">
-						<PostPreview post={p} />
-					</li>
-				))
-			}
-		</ul>
-	</section>
 	<section class="mt-16">
 		<h2 class="title mb-4 text-xl">Technologies</h2>
 		<ul class="space-y-4 sm:space-y-2">
@@ -99,6 +87,18 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 				</a>:
 				<p class="inline-block sm:mt-2">Generating png Open Graph images for blog posts</p>
 			</li>
+		</ul>
+	</section>
+	<section aria-label="Blog post list" class="mt-16">
+		<h2 class="title mb-4 text-xl">Projects</h2>
+		<ul class="space-y-4 sm:space-y-2">
+			{
+				allPostsByDate.map((p) => (
+					<li class="flex flex-col flex-wrap gap-x-2 sm:flex-row [&_q]:w-full">
+						<PostPreview post={p} withDesc={true} />
+					</li>
+				))
+			}
 		</ul>
 	</section>
 </PageLayout>
