--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -5,6 +5,7 @@ import Header from "@/components/layout/Header";
 import Footer from "@/components/layout/Footer";
 import SkipLink from "@/components/SkipLink";
 import { siteConfig } from "@/site-config";
+import { GoogleAnalytics } from "astro-google-analytics";
 
 interface Props {
 	meta: SiteMeta;
@@ -50,6 +51,7 @@ const {
 			// initailse root class attribute
 			root.classList.toggle("dark", isDark);
 		</script>
+		<GoogleAnalytics id="G-JH1NMD4JKD" />
 	</head>
 	<body>
 		<SkipLink />
