--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -9,7 +9,7 @@ import { SOCIAL_LINKS } from "@/data/constants";
 	<ul class="flex flex-1 items-center gap-x-1 sm:flex-initial">
 		<li>
 			<a
-				class="inline-block p-2 sm:hover:text-link"
+				class="inline-block p-1 sm:hover:text-link"
 				href={SOCIAL_LINKS.github}
 				target="_blank"
 				rel="noopener noreferrer"
@@ -35,7 +35,36 @@ import { SOCIAL_LINKS } from "@/data/constants";
 			</a>
 		</li>
 		<li>
-			<a class="inline-block sm:hover:text-link" href={`mailto:${SOCIAL_LINKS.email}`}>
+			<a
+				class="inline-block p-1 sm:hover:text-link"
+				href={SOCIAL_LINKS.linkedin}
+				target="_blank"
+				rel="noopener noreferrer"
+				><svg
+					class="h-6 w-6"
+					aria-hidden="true"
+					focusable="false"
+					xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					fill="none"
+					stroke-linecap="round"
+					stroke-linejoin="round"
+				>
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+					<path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
+					></path>
+					<path d="M8 11l0 5"></path>
+					<path d="M8 8l0 .01"></path>
+					<path d="M12 16l0 -5"></path>
+					<path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
+				</svg>
+				<span class="sr-only">Linkedin</span>
+			</a>
+		</li>
+		<li>
+			<a class="inline-block p-1 sm:hover:text-link" href={`mailto:${SOCIAL_LINKS.email}`}>
 				<svg
 					class="h-6 w-6"
 					aria-hidden="true"
