--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -8,7 +8,7 @@ const allTags = getUniqueTagsWithCount(allPosts);
 
 const meta = {
 	title: "All Tags",
-	description: "All Tags from my blogs",
+	description: "All Tags from my projectss",
 };
 ---
 
