--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -10,7 +10,7 @@ const year = new Date().getFullYear();
 	<div class="mr-0 sm:mr-4">
 		Copyright &copy; {year}
 		<span aria-label="rocket emoji">🚀</span>
-		Astro Cactus
+		Pavel Klečanský
 	</div>
 	<nav
 		aria-label="More on this site"
