--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
 import aboutImg from "../assets/about-astro.png";
+import { MY_SKILL, PLAN_TO_LEARN } from "@/data/constants";
 
 const meta = {
 	title: "About",
@@ -13,8 +14,8 @@ const meta = {
 	<div class="space-y-6">
 		<h1 class="title">About</h1>
 		<p>
-			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own blogging
-			website.
+			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own
+			blogging website.
 		</p>
 		<div class="flex justify-center">
 			<Image
@@ -23,27 +24,23 @@ const meta = {
 				loading="eager"
 			/>
 		</div>
-		<p>Here are my some of my awesome built in features:</p>
-		<ul class="list-inside list-disc">
-			<li>I'm ultra fast as I'm a static site</li>
-			<li>I'm fully responsive</li>
-			<li>I come with a light and dark mode</li>
-			<li>I'm easy to customise and add additional content</li>
-			<li>I have Tailwind CSS styling</li>
-			<li>Shiki code syntax highlighting</li>
-			<li>Satori for auto generating OG images for blog posts</li>
-		</ul>
-		<p>
-			Clone or fork my
-			<a
-				class="cactus-link inline-block"
-				href="https://github.com/chrismwilliams/astro-cactus"
-				target="_blank"
-				rel="noopener noreferrer"
-				aria-label="github repository"
-			>
-				repo
-			</a> if you like me!
-		</p>
+		<section class="mt-12">
+			<h2 class="title mb-4 text-xl">My Skills</h2>
+			{
+				MY_SKILL.map((skill) => (
+					<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
+						{skill.title}
+					</div>
+				))
+			}
+			<h2 class="text-l mb-4 font-bold">Technologie I plan to learn</h2>
+			{
+				PLAN_TO_LEARN.map((skill) => (
+					<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
+						{skill.title}
+					</div>
+				))
+			}
+		</section>
 	</div>
 </PageLayout>
