--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from "astro:content";
 import PageLayout from "@/layouts/Base";
 import PostPreview from "@/components/blog/PostPreview";
 import SocialList from "@/components/SocialList";
+import { MY_SKILL, PLAN_TO_LEARN } from "@/data/constants";
 import { sortMDByDate } from "@/utils";
 
 const MAX_POSTS = 10;
@@ -12,82 +13,34 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Hello World! <span class="text-red-600">UNDER CONSTRUCTION 🚧</span></h1>
+		<h1 class="title mb-6">
+			Hello World! <span class="text-red-600">UNDER CONSTRUCTION 🚧</span>
+		</h1>
 		<p class="mb-4">
-			Hi, I’m a theme for Astro, an example of how you can use this starter to create a personal
-			blog. If you want to know more about how you can customise me, add more posts, and make it
-			your own, click on one the github icon link below which will take you to my repo.
+			Hi, I’m a theme for Astro, an example of how you can use this starter to create a
+			personal blog. If you want to know more about how you can customise me, add more posts,
+			and make it your own, click on one the github icon link below which will take you to my
+			repo.
 		</p>
 		<SocialList />
 	</section>
 	<section class="mt-12">
-		<h2 class="title mb-4 text-xl">Technologies</h2>
-		<ul class="space-y-4 sm:space-y-2">
-			<li>
-				<a
-					href="https://astro.build"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Astro
-				</a>:
-				<p class="inline-block sm:mt-2">Build fast websites, faster.</p>
-			</li>
-			<li>
-				<a
-					href="https://docs.astro.build/en/guides/integrations-guide/image/"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>@astro/image
-				</a>:
-				<p class="inline-block sm:mt-2">
-					An Astro integration for optimising images in Astro projects.
-				</p>
-			</li>
-			<li>
-				<a
-					href="https://tailwindcss.com"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Tailwind CSS
-				</a>:
-				<p class="inline-block sm:mt-2">
-					Rapidly build modern websites without ever leaving your HTML.
-				</p>
-			</li>
-			<li>
-				<a
-					href="https://www.markdownguide.org/"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Markdown
-				</a>:
-				<p class="inline-block sm:mt-2">Simple and easy-to-use markup language.</p>
-			</li>
-			<li>
-				<a
-					href="https://mdxjs.com/"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>MDX
-				</a>:
-				<p class="inline-block sm:mt-2">Markdown for the component era.</p>
-			</li>
-			<li>
-				<a
-					href="https://github.com/vercel/satori"
-					target="_blank"
-					rel="noopener noreferrer"
-					class="cactus-link inline-block"
-					>Satori
-				</a>:
-				<p class="inline-block sm:mt-2">Generating png Open Graph images for blog posts</p>
-			</li>
-		</ul>
+		<h2 class="title mb-4 text-xl">My Skills</h2>
+		{
+			MY_SKILL.map((skill) => (
+				<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
+					{skill.title}
+				</div>
+			))
+		}
+		<h2 class="text-l mb-4 font-bold">Technologie I plan to learn</h2>
+		{
+			PLAN_TO_LEARN.map((skill) => (
+				<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
+					{skill.title}
+				</div>
+			))
+		}
 	</section>
 	<section aria-label="Blog post list" class="mt-12">
 		<h2 class="title mb-4 text-xl">Projects</h2>
