--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -7,7 +7,7 @@ import { MY_SKILL, PLAN_TO_LEARN } from "@/data/constants";
 import { sortMDByDate } from "@/utils";
 import { t, changeLanguage } from "i18next";
 
-changeLanguage("cs");
+changeLanguage("en");
 
 const MAX_POSTS = 10;
 const allPosts = await getCollection("post");
