--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -3,6 +3,9 @@ import ThemeToggle from "../ThemeToggle.astro";
 import { MENU_LINKS } from "@/data/constants";
 import { Image } from "@astrojs/image/components";
 import image from "../../assets/image.jpg";
+import { LanguageSelector } from "astro-i18next/components";
+import { localizePath } from "astro-i18next";
+import i18next from "i18next";
 
 const url = new URL(Astro.request.url);
 ---
@@ -12,7 +15,9 @@ const url = new URL(Astro.request.url);
 
 	document.addEventListener("DOMContentLoaded", () => {
 		const header = document.getElementById("main-header") as HTMLElement;
-		const toggleMenuButton = document.getElementById("toggle-navigation-menu") as HTMLButtonElement;
+		const toggleMenuButton = document.getElementById(
+			"toggle-navigation-menu"
+		) as HTMLButtonElement;
 		let menuOpen = false;
 
 		toggleMenuButton.addEventListener("click", () => {
@@ -26,7 +31,7 @@ const url = new URL(Astro.request.url);
 <header id="main-header" class="group relative mb-20 flex items-center sm:pl-[6rem]">
 	<div class="flex sm:flex-col">
 		<a
-			href="/"
+			href={localizePath("/", i18next.language)}
 			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
 			aria-current={url.pathname === "/" ? "page" : false}
 		>
@@ -46,7 +51,7 @@ const url = new URL(Astro.request.url);
 			{
 				MENU_LINKS.map((link) => (
 					<a
-						href={link.path}
+						href={localizePath(link.path, i18next.language)}
 						class="py-4 px-4 sm:py-0 sm:hover:underline"
 						aria-current={url.pathname === link.path ? "page" : false}
 						rel="prefetch"
@@ -58,9 +63,10 @@ const url = new URL(Astro.request.url);
 		</nav>
 	</div>
 	<ThemeToggle />
+	<LanguageSelector class="ml-2 rounded-md border bg-bgColor p-0.5 text-xs text-textColor" />
 	<button
 		id="toggle-navigation-menu"
-		class="group relative ml-8 h-7 w-7 sm:invisible sm:hidden"
+		class="group relative ml-2 h-7 w-7 sm:invisible sm:hidden"
 		type="button"
 		aria-label="Open main menu"
 		aria-expanded="false"
@@ -77,7 +83,8 @@ const url = new URL(Astro.request.url);
 			stroke-width="1.5"
 			stroke="currentColor"
 		>
-			<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5"></path>
+			<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5"
+			></path>
 		</svg>
 		<svg
 			id="cross-svg"
