--- a/src/pages/en/404.astro
+++ b/src/pages/en/404.astro
@@ -2,9 +2,9 @@
 import { changeLanguage } from "i18next";
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
-import aboutImg from "../assets/about-astro.png";
+import aboutImg from "../../assets/about-astro.png";
 
-changeLanguage("cs");
+changeLanguage("en");
 
 const meta = {
     title: "Oops! You found a missing page!",
