--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -2,10 +2,10 @@
 import { t, changeLanguage } from "i18next";
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
-import aboutImg from "../assets/about-astro.png";
+import aboutImg from "../../assets/about-astro.png";
 import { MY_SKILL, PLAN_TO_LEARN } from "@/data/constants";
 
-changeLanguage("cs");
+changeLanguage("en");
 
 const meta = {
     title: "About",
