--- a/src/pages/en/posts/[...page].astro
+++ b/src/pages/en/posts/[...page].astro
@@ -8,7 +8,7 @@ import PostPreview from "@/components/blog/PostPreview";
 import Pagination from "@/components/Paginator";
 import { getUniqueTags, sortMDByDate } from "@/utils";
 
-changeLanguage("cs");
+changeLanguage("en");
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
     const allPosts = await getCollection("post");
