--- a/src/pages/en/posts/[post].astro
+++ b/src/pages/en/posts/[post].astro
@@ -5,7 +5,7 @@ import type { CollectionEntry } from "astro:content";
 import { getCollection } from "astro:content";
 import PostLayout from "@/layouts/BlogPost";
 
-changeLanguage("cs");
+changeLanguage("en");
 
 export async function getStaticPaths(): Promise<GetStaticPathsResult> {
     const posts: CollectionEntry<"post">[] = await getCollection("post");
