Changing font family and adding some translations.

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -5,8 +5,8 @@ import { SOCIAL_LINKS } from "@/data/constants";
 ---
 
 <div class="flex flex-wrap items-center gap-x-1 sm:items-center">
-	<p>Find me on</p>
-	<ul class="flex flex-1 items-center gap-x-1 sm:flex-initial">
+	<p class="text-base">Find me on:</p>
+	<ul class="flex flex-1 items-center gap-x-1 text-base sm:flex-initial">
 		<li>
 			<a
 				class="inline-block p-1 sm:hover:text-link"
@@ -53,7 +53,8 @@ import { SOCIAL_LINKS } from "@/data/constants";
 					stroke-linejoin="round"
 				>
 					<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-					<path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
+					<path
+						d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
 					></path>
 					<path d="M8 11l0 5"></path>
 					<path d="M8 8l0 .01"></path>
