--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import { MENU_LINKS } from "@/data/constants";
 import { localizePath } from "astro-i18next";
-import i18next from "i18next";
+import i18next, { t } from "i18next";
 
 const year = new Date().getFullYear();
 ---
@@ -24,7 +24,7 @@ const year = new Date().getFullYear();
 					href={localizePath(link.path, i18next.language)}
 					class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
 				>
-					{link.title}
+					{t(link.title)}
 				</a>
 			))
 		}
