--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,11 +16,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1>{t("test")}</h1>
 		<h1 class="title mb-6">
 			Hello World! <span class="text-red-600">UNDER CONSTRUCTION 🚧</span>
 		</h1>
-		<p class="mb-4">
+		<p class="mb-4 text-base">
 			Hi, I’m a theme for Astro, an example of how you can use this starter to create a
 			personal blog. If you want to know more about how you can customise me, add more posts,
 			and make it your own, click on one the github icon link below which will take you to my
@@ -32,7 +31,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 		<h2 class="title mb-4 text-xl">My Skills</h2>
 		{
 			MY_SKILL.map((skill) => (
-				<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
+				<div class="mr-2 mb-2 inline-block bg-textColor px-4 py-2 text-base font-semibold text-bgColor">
 					{skill.title}
 				</div>
 			))
