Adding new things and translations.

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 import type { SiteMeta } from "@/data/siteMeta";
 import { siteConfig } from "@/site-config";
 import "../styles/global.css";
+import i18next from "i18next";
 
 type Props = SiteMeta;
 
@@ -39,7 +40,7 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 <meta property="og:description" content={description} />
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:site_name" content={siteConfig.title} />
-<meta property="og:locale" content={siteConfig.ogLocale} />
+<meta property="og:locale" content={i18next.language} />
 <meta property="og:image" content={socialImageURL} />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
