--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -1,11 +1,11 @@
 ---
 import { SOCIAL_LINKS } from "@/data/constants";
-
+import { t } from "i18next";
 // *** SVG icons from https://tablericons.com/ ***
 ---
 
 <div class="flex flex-wrap items-center gap-x-1 sm:items-center">
-	<p class="text-base">Find me on:</p>
+	<p class="text-base">{t("find-me")}:</p>
 	<ul class="flex flex-1 items-center gap-x-1 text-base sm:flex-initial">
 		<li>
 			<a
