--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,35 +1,24 @@
 ---
 import { t, changeLanguage } from "i18next";
 import PageLayout from "@/layouts/Base";
-import { Image } from "@astrojs/image/components";
-import aboutImg from "../../assets/about-astro.png";
-import { MY_SKILL, PLAN_TO_LEARN } from "@/data/constants";
+import { MY_SKILL } from "@/data/constants";
 
 changeLanguage("en");
 
 const meta = {
-    title: "About",
-    description: "I'm a starter theme for Astro.build",
+    title: t("about"),
 };
 ---
 
 <PageLayout meta={meta}>
 	<div class="space-y-6">
-		<h1>{t("test")}</h1>
-		<h1 class="title">About</h1>
+		<h1 class="title">{t("about")}</h1>
 		<p>
 			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own
 			blogging website.
 		</p>
-		<div class="flex justify-center">
-			<Image
-				src={aboutImg}
-				alt="A cartoon cactus looking at the 'Astro.build' logo"
-				loading="eager"
-			/>
-		</div>
 		<section class="mt-12">
-			<h2 class="title mb-4 text-xl">My Skills</h2>
+			<h2 class="title mb-4 text-xl">{t("technologie")}</h2>
 			{
 				MY_SKILL.map((skill) => (
 					<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
@@ -37,14 +26,14 @@ const meta = {
 					</div>
 				))
 			}
-			<h2 class="text-l mb-4 font-bold">Technologie I plan to learn</h2>
+			<!-- <h2 class="text-l mb-4 font-bold">{t("future-technologie")}</h2>
 			{
 				PLAN_TO_LEARN.map((skill) => (
 					<div class="text-md mr-2 mb-2 inline-block bg-textColor px-4 py-2 font-semibold text-bgColor">
 						{skill.title}
 					</div>
 				))
-			}
+			} -->
 		</section>
 	</div>
 </PageLayout>
