--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 import PageLayout from "@/layouts/Base";
 // import PostPreview from "@/components/blog/PostPreview";
 import SocialList from "@/components/SocialList";
-import { MY_SKILL, PLAN_TO_LEARN, PROJECTS } from "@/data/constants";
+import { MY_SKILL, PROJECTS } from "@/data/constants";
 // import { sortMDByDate } from "@/utils";
 import { t, changeLanguage } from "i18next";
 
@@ -12,16 +12,10 @@ changeLanguage("cs");
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">
-			Hello World! <span class="text-red-600">UNDER CONSTRUCTION 🚧</span>
-		</h1>
-		<p class="mb-4 text-base">
-			Hi, I’m a theme for Astro, an example of how you can use this starter to create a
-			personal blog. If you want to know more about how you can customise me, add more posts,
-			and make it your own, click on one the github icon link below which will take you to my
-			repo.
-		</p>
-		<SocialList />
+		<p class="text-base" set:html={t("about-me")} />
+		<div class="mt-4">
+			<SocialList />
+		</div>
 	</section>
 	<section class="mt-6">
 		<h2 class="title mb-4 text-xl">{t("technologie")}</h2>
@@ -54,7 +48,7 @@ changeLanguage("cs");
 		</ul>
 	</section> -->
 	<section class="mt-6">
-		<h2 class="title mb-4 text-xl">{t("projects")}</h2>
+		<h2 class="title mb-1 text-xl">{t("projects")}</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			{
 				PROJECTS.map(({ href, title, desc }) => (
@@ -65,9 +59,9 @@ changeLanguage("cs");
 							rel="noopener noreferrer"
 							class="cactus-link inline-block"
 						>
-							{title}
+							{t(title)}:
 						</a>
-						:<p class="inline-block sm:mt-2">{desc}</p>
+						<p class="inline-block sm:mt-2">{t(desc)}</p>
 					</li>
 				))
 			}
