--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -14,8 +14,8 @@ const meta = {
 	<div class="space-y-6">
 		<h1 class="title">{t("projects")}</h1>
 		<p>
-			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own
-			blogging website.
+			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own blogging
+			website.
 		</p>
 		<section class="mt-6">
 			<ul class="space-y-4 sm:space-y-2">
@@ -28,7 +28,7 @@ const meta = {
 								rel="noopener noreferrer"
 								class="cactus-link inline-block"
 							>
-								{title}
+								{t(title)}:
 							</a>
 							:<p class="inline-block sm:mt-2">{desc}</p>
 						</li>
