Add forgotten genereted content.

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -12,7 +12,7 @@ changeLanguage("en");
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<p class="text-base" set:html={t("about-me")} />
+		<p class="mt-2 text-base" set:html={t("about-me")} />
 		<div class="mt-4">
 			<SocialList />
 		</div>
