Fix nav on mobike

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -27,7 +27,7 @@
 	customElements.define("theme-toggle", ThemeToggle);
 </script>
 
-<theme-toggle class="ml-auto">
+<theme-toggle class="xs:ml-auto">
 	<button
 		type="button"
 		id="toggle-theme"
