--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -15,9 +15,7 @@ const url = new URL(Astro.request.url);
 
 	document.addEventListener("DOMContentLoaded", () => {
 		const header = document.getElementById("main-header") as HTMLElement;
-		const toggleMenuButton = document.getElementById(
-			"toggle-navigation-menu"
-		) as HTMLButtonElement;
+		const toggleMenuButton = document.getElementById("toggle-navigation-menu") as HTMLButtonElement;
 		let menuOpen = false;
 
 		toggleMenuButton.addEventListener("click", () => {
@@ -62,7 +60,7 @@ const url = new URL(Astro.request.url);
 			}
 		</nav>
 	</div>
-	<div class="ml-auto flex">
+	<div class="ml-auto flex flex-wrap justify-center gap-1 xs:flex-nowrap xs:gap-0">
 		<ThemeToggle />
 		<LanguageSelector
 			class="ml-2 rounded-md border bg-bgColor p-0.5 text-sm text-textColor sm:text-xl"
@@ -87,8 +85,7 @@ const url = new URL(Astro.request.url);
 			stroke-width="1.5"
 			stroke="currentColor"
 		>
-			<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5"
-			></path>
+			<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9h16.5m-16.5 6.75h16.5"></path>
 		</svg>
 		<svg
 			id="cross-svg"
