--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import { PROJECTS } from "@/data/constants";
 changeLanguage("cs");
 
 const meta = {
-    title: t("projects"),
+	title: t("projects"),
 };
 ---
 
@@ -29,7 +29,7 @@ const meta = {
 							>
 								{t(title)}:
 							</a>
-							:<p class="inline-block sm:mt-2">{t(desc)}</p>
+							<p class="inline-block sm:mt-2">{t(desc)}</p>
 						</li>
 					))
 				}
